@startuml streaming service

class User {
    +username: String
    +email: String
    +playlists: Playlist[]
    +subscription: Subscription
    +createPlaylist(name: String): Playlist
}

class Artist {
    +name: String
    +albums: Album[]
    +createAlbum(title: String): Album
}

class Album {
    +title: String
    +songs: Song[]
    +addSong(title: String, duration: Integer): Song
}

class PremiumAlbum {
    +exclusiveContent: String
    +addExclusiveContent(content: String)
}

class Song {
    +title: String
    +duration: Integer
}

class Playlist {
    +name: String
    +songs: Song[]
    +addSong(song: Song)
}

class Subscription {
    +type: String
    +price: Double
}

User "1" -- "0..*" Playlist : has
User "0..*" -- "1" Subscription : has
Artist "1" -- "0..*" Album : creates
Album "1" -- "0..*" Song : contains
Playlist "0..*" -- "0..*" Song : contains
PremiumAlbum --|> Album

@enduml